--- a/src/app.css
+++ b/src/app.css
@@ -1,15 +1,8 @@
 :root {
 	--font: "Source Sans Pro", -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
 		'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: "Source Sans Pro", ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas, 'DejaVu Sans Mono',
-		monospace;
-
-	font-family: var(--font);
-	line-height: 1.5;
-	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
 	background-color: #242424;
 
 	font-synthesis: none;
@@ -17,6 +10,10 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	-webkit-text-size-adjust: 100%;
+}
+
+* {
+	font-family: var(--font);
 }
 
 a {
@@ -288,6 +285,14 @@ h1 {
 	}
 }
 
+.sticky-top {
+	top: 0;
+	/* padding-top: 1rem; */
+	position: sticky;
+	background-color: #242424;
+	z-index: 10;
+}
+
 @media (prefers-color-scheme: light) {
 	:root {
 		color: #213547;
@@ -309,12 +314,4 @@ h1 {
 		align-items: start;
 		flex-direction: column;
 	}
-}
-
-.sticky-top {
-	top: 0;
-	/* padding-top: 1rem; */
-	position: sticky;
-	background-color: #242424;
-	z-index: 10;
 }
